bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:3: error: not found: value asmile
  if (asmile) && (bsmile){
      ^MonkeyTrouble:3: error: not found: value &&
  if (asmile) && (bsmile){
              ^MonkeyTrouble:3: error: not found: value bsmile
  if (asmile) && (bsmile){
                  ^MonkeyTrouble:6: error: not found: value asmile
  if (!asmile) && (!bsmile){
       ^MonkeyTrouble:6: error: not found: value &&
  if (!asmile) && (!bsmile){
               ^MonkeyTrouble:6: error: not found: value bsmile
  if (!asmile) && (!bsmile){
                    ^