bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if (asmile) && (bsmile){
    return(true)
  }
  if (!asmile) && (!bsmile){
    return(true)
  }
  else{
    return(false)
  }
}